Bug 55591 - Assertion hit when browsing while running mplayer
Summary: Assertion hit when browsing while running mplayer
Status: RESOLVED FIXED
Alias: None
Product: xorg
Classification: Unclassified
Component: Driver/intel (show other bugs)
Version: git
Hardware: Other All
: medium normal
Assignee: Chris Wilson
QA Contact: Xorg Project Team
URL:
Whiteboard:
Keywords:
Depends on:
Blocks:
 
Reported: 2012-10-03 19:37 UTC by Clemens Eisserer
Modified: 2012-10-03 21:56 UTC (History)
0 users

See Also:
i915 platform:
i915 features:


Attachments

Description Clemens Eisserer 2012-10-03 19:37:40 UTC
When browsing using FireFox with an Mplayer (XVideo backend) runnnig by its side, I get the following assertion quite frequently on my gen6 based notebook: 

Program received signal SIGABRT, Aborted.
0x0000003ff1435925 in __GI_raise (sig=sig@entry=6) at ../nptl/sysdeps/unix/sysv/linux/raise.c:64
64	  return INLINE_SYSCALL (tgkill, 3, pid, selftid, sig);
(gdb) bt
#0  0x0000003ff1435925 in __GI_raise (sig=sig@entry=6) at ../nptl/sysdeps/unix/sysv/linux/raise.c:64
#1  0x0000003ff14370d8 in __GI_abort () at abort.c:91
#2  0x0000003ff142e6a2 in __assert_fail_base (fmt=0x3ff1578188 "%s%s%s:%u: %s%sAssertion `%s' failed.\n%n", 
    assertion=assertion@entry=0x7f6afd0966fe "priv->cpu == 0", file=file@entry=0x7f6afd095d5e "sna_accel.c", line=line@entry=3167, 
    function=function@entry=0x7f6afd09bc50 "sna_pixmap_move_to_gpu") at assert.c:94
#3  0x0000003ff142e752 in __GI___assert_fail (assertion=0x7f6afd0966fe "priv->cpu == 0", file=0x7f6afd095d5e "sna_accel.c", line=3167, 
    function=0x7f6afd09bc50 "sna_pixmap_move_to_gpu") at assert.c:103
#4  0x00007f6afcf85687 in sna_pixmap_move_to_gpu (pixmap=0x16a61b0, flags=2) at sna_accel.c:3167
#5  0x00007f6afcf89b78 in sna_copy_boxes (src=0x16a61b0, dst=0x170b1e0, gc=0x1660880, region=0x7fff5d0bba80, dx=565, dy=78, bitplane=0, closure=0x0)
    at sna_accel.c:4491
#6  0x00007f6afcf8b925 in sna_do_copy (src=0x16a61b0, dst=0x170b1e0, gc=0x1660880, sx=565, sy=78, width=53, height=20, dx=0, dy=0, 
    copy=0x7f6afcf89403 <sna_copy_boxes>, bitPlane=0, closure=0x0) at sna_accel.c:4984
#7  0x00007f6afcf8bfb5 in sna_copy_area (src=0x16a61b0, dst=0x170b1e0, gc=0x1660880, src_x=565, src_y=78, width=53, height=20, dst_x=0, dst_y=0)
    at sna_accel.c:5089
#8  0x000000000050523d in ?? ()
#9  0x000000000043048b in ?? ()
#10 0x000000000043447a in ?? ()
#11 0x0000000000423485 in ?? ()
#12 0x0000003ff1421735 in __libc_start_main (main=0x423110, argc=8, ubp_av=0x7fff5d0bbe18, init=<optimized out>, fini=<optimized out>, 
    rtld_fini=<optimized out>, stack_end=0x7fff5d0bbe08) at libc-start.c:226
#13 0x000000000042375d in _start ()
Comment 1 Clemens Eisserer 2012-10-03 19:41:23 UTC
debug=full log is available at: http://93.83.133.214/Xorg.4.log.7za
Comment 2 Chris Wilson 2012-10-03 21:23:48 UTC
So this morning. Should be fixed by

commit b3a502a7057649b284601bdd5110b136ab1f5fbb
Author: Chris Wilson <chris@chris-wilson.co.uk>
Date:   Wed Oct 3 11:46:57 2012 +0100

    sna: Review sna_pixmap->cpu tracking
    
    Notably 52b211cb15b3 was triggering a few assertions.
    
    Signed-off-by: Chris Wilson <chris@chris-wilson.co.uk>
Comment 3 Clemens Eisserer 2012-10-03 21:29:56 UTC
just double-checked, I am hitting this assertion with the current master 2.20.9-20-g0d42872
Comment 4 Chris Wilson 2012-10-03 21:56:38 UTC
Sorry about that, just looked identical to the earlier assertion. When in fact it was the assertion added in that patch to verify I had all the paths covered.

commit b71af5dc626adfdf7d753e8e61fb13e8b9290d17
Author: Chris Wilson <chris@chris-wilson.co.uk>
Date:   Wed Oct 3 22:53:57 2012 +0100

    sna: Clear sna_pixmap->cpu when destroying the CPU damage
    
    So that we keep the assertion checks that without CPU damage we can not
    be on the cpu.
    
    Reported-by: Clemens Eisserer <linuxhippy@gmail.com>
    Bugzilla: https://bugs.freedesktop.org/show_bug.cgi?id=55591
    Signed-off-by: Chris Wilson <chris@chris-wilson.co.uk>


Use of freedesktop.org services, including Bugzilla, is subject to our Code of Conduct. How we collect and use information is described in our Privacy Policy.