sna: Clear sna_pixmap->cpu when destroying the CPU damage

So that we keep the assertion checks that without CPU damage we can not
be on the cpu.

Reported-by: Clemens Eisserer <linuxhippy@gmail.com>
Bugzilla: https://bugs.freedesktop.org/show_bug.cgi?id=55591
Signed-off-by: Chris Wilson <chris@chris-wilson.co.uk>